--- a/test/examplesAlbert/login.html
+++ b/test/examplesAlbert/login.html
@@ -51,11 +51,11 @@
             <div class="container">
                 <div class="columns is-centered">
                   <div class="column is-5-tablet is-4-desktop is-3-widescreen">
-                    <form action="" class="box">
+                    <form action="" class="box login">
                       <div class="field">
                         <label for="" class="label">Email</label>
                         <div class="control has-icons-left">
-                          <input type="email" placeholder="e.g. bobsmith@gmail.com" class="input" required>
+                          <input type="email" id="email-input" placeholder="e.g. bobsmith@gmail.com" class="input" required>
                           <span class="icon is-small is-left">
                             <i class="fa fa-envelope"></i>
                           </span>
@@ -64,14 +64,14 @@
                       <div class="field">
                         <label for="" class="label">Password</label>
                         <div class="control has-icons-left">
-                          <input type="password" placeholder="*******" class="input" required>
+                          <input type="password" id="password-input" placeholder="*******" class="input" required>
                           <span class="icon is-small is-left">
                             <i class="fa fa-lock"></i>
                           </span>
                         </div>
                       </div>
                       <div class="field">
-                        <button class="button is-success">
+                        <button class="button is-success" type="submit">
                           Login
                         </button>
                       </div>
