Added chosenChallenge and table for challenges

--- a/public/members.html
+++ b/public/members.html
@@ -26,6 +26,19 @@
       </div>
     </div>
   </div>
+  
+  <form>
+    <div class="form-group col-md-4">
+        <label for="inputState">Choose Your Challenge</label>
+        <select id="inputState" class="form-control">
+        <option selected>Choose...</option>
+        <option>1. Pushups</option>
+        <option>2. Squats</option>
+        <option>3. Lunges</option>
+      </select>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
