--- a/test/testAjax.html
+++ b/test/testAjax.html
@@ -28,10 +28,10 @@
                 var queryURL =
 
                     //1. this return json objects 
-                    "https://wger.de/api/v2/" + workout + "/?format=json";
+                    // "https://wger.de/api/v2/" + workout + "/?format=json";
 
                 //2. this returns an html page. Not sure how we could use this but it looks interesting
-                // "https://wger.de/api/v2/" + workout + ".api/";
+                "https://wger.de/api/v2/" + workout + ".api/";
 
                 //3. this returns an object using its id at the end. (SEE CONSOLE LOG)
                 // "https://wger.de/api/v2/muscle/2"
