--- a/public/members.html
+++ b/public/members.html
@@ -10,19 +10,43 @@
 
 
 <div class="w3-container w3-theme w3-card w3-large" id="background">
-    <div class="w3-bar w3-theme-l3">
-        <a href="#" class="w3-bar-item w3-button">Home</a>
-        <a href="/logout" class="w3-bar-item w3-button">Logout</a>
+  <!-- Navbar -->
+  <div class="w3-bar w3-theme-l3">
+    <a href="#" class="w3-bar-item w3-button">Home</a>
+    <a href="/logout" class="w3-bar-item w3-button">Logout</a>
+  </div>
+  <!-- Top Welcome Bar -->
+  <div class="container">
+    <div class="w3-row">
+      <div class="w3-col w3-center">
+        <div class="w3-panel w3-card-2 w3-light-grey " id="form-card">
+          <h2>Welcome <span class="member-name"></span>, What can you accomplish in 30 days?</h2>
+        </div>
       </div>
-    <div class="w3-panel w3-card-2 w3-light-grey w3-display-middle" id="form-card">
-        <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-md-offset-3">
-                <h2>Welcome <span class="member-name"></span></h2>
-              </div>
-            </div>
-          </div>
     </div>
+  </div>
+  <!-- Ask the user -->
+  <div class="w3-container">
+    <div class="w3-row">
+      <div class="w3-col">
+        <div class="w3-panel w3-card-4 w3-light-grey w3-center" id="form-card">
+          <form role="form ">
+          <div class="form-group">
+            <label for="pwd">Type of Workout:</label>
+            <select id="workout" class="custom-select" aria-labelledby="dropdownMenuButton">
+              <option selected value="1">Pushup</option>
+              <!-- Setting the option for 5 as default -->
+              <option value="2">Situp</option>
+              <option value="3">Jump Rope</option>
+            </select>
+            <button type="submit" class="btn btn-default" id="challenge-btn">
+              <i class="fa fa-search"></i> Search</button>
+          </div>
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
