--- a/public/members.html
+++ b/public/members.html
@@ -6,52 +6,61 @@
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-cyan.css">
 <link rel="stylesheet" href="css/loginStyle.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+
 <body>
 
 
-<div class="w3-container w3-theme w3-card w3-large" id="background">
-  <!-- Navbar -->
-  <div class="w3-bar w3-theme-l3">
-    <a href="#" class="w3-bar-item w3-button">Home</a>
-    <a href="/logout" class="w3-bar-item w3-button">Logout</a>
-  </div>
-  <!-- Top Welcome Bar -->
-  <div class="container">
-    <div class="w3-row">
-      <div class="w3-col w3-center">
-        <div class="w3-panel w3-card-2 w3-light-grey " id="form-card">
-          <h2>Welcome <span class="member-name"></span>, What can you accomplish in 30 days?</h2>
-        </div>
-      </div>
+  <div class="w3-container w3-theme w3-card w3-large" id="background">
+    <!-- Navbar -->
+    <div class="w3-bar w3-theme-l3">
+      <a href="#" class="w3-bar-item w3-button">Home</a>
+      <a href="/logout" class="w3-bar-item w3-button">Logout</a>
     </div>
-  </div>
-  <!-- Ask the user -->
-  <div class="w3-container">
-    <div class="w3-row">
-      <div class="w3-col">
-        <div class="w3-panel w3-card-4 w3-light-grey w3-center" id="form-card">
-          <form role="form " id="workout-form">
-          <div class="form-group">
-            <label for="pwd">Type of Workout:</label>
-            <select id="workout" class="custom-select" aria-labelledby="dropdownMenuButton">
-              <option selected value="1">Pushup</option>
-              <!-- Setting the option for 5 as default -->
-              <option value="2">Situp</option>
-              <option value="3">Jump Rope</option>
-            </select>
-            <button type="submit" class="btn btn-default" id="challenge-btn">
-              <i class="fa fa-search"></i> Search</button>
+    <!-- Top Welcome Bar -->
+    <div class="container">
+      <div class="w3-row">
+        <div class="w3-col w3-center">
+          <div class="w3-panel w3-card-2 w3-light-grey " id="form-card">
+            <h2>Welcome <span class="member-name"></span>, What can you accomplish in 30 days?</h2>
           </div>
-        </form>
+        </div>
+      </div>
+    </div>
+    <!-- Ask the user -->
+    <div class="w3-container">
+      <div class="w3-row">
+        <div class="w3-col">
+          <div class="w3-panel w3-card-4 w3-light-grey w3-center" id="form-card">
+            <form role="form " id="workout-form">
+              <div class="form-group">
+                <label for="pwd">Type of Workout:</label>
+                <select id="workout" class="custom-select" aria-labelledby="dropdownMenuButton">
+                  <option selected value="1">Pushup</option>
+                  <!-- Setting the option for 5 as default -->
+                  <option value="2">Situp</option>
+                  <option value="3">Jump Rope</option>
+                </select>
+                <button type="submit" class="btn btn-default" id="challenge-btn">
+                  <i class="fa fa-search"></i> Search</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="w3-container">
+      <div class="w3-row">
+        <div class="w3-col" id="table">
+
         </div>
       </div>
     </div>
   </div>
-</div>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
 
 </body>
+
 </html>
