removed dot from workout table

--- a/public/members.html
+++ b/public/members.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-cyan.css">
 <link rel="stylesheet" href="css/loginStyle.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+<link rel="stylesheet" href="css/membersStyle.css">
 
 <body>
 
