changed values on dropdown

--- a/public/members.html
+++ b/public/members.html
@@ -36,10 +36,10 @@
               <div class="form-group">
                 <label for="pwd">Type of Workout:</label>
                 <select id="workout" class="custom-select" aria-labelledby="dropdownMenuButton">
-                  <option selected value="1">Pushup</option>
+                  <option selected value="Pushups">Pushup</option>
                   <!-- Setting the option for 5 as default -->
-                  <option value="2">Situp</option>
-                  <option value="3">Jump Rope</option>
+                  <option value="Situps">Situp</option>
+                  <option value="JumpRope">Jump Rope</option>
                 </select>
                 <button type="submit" class="btn btn-default" id="challenge-btn">
                   <i class="fa fa-search"></i> Search</button>
