created a display for the login page

--- a/public/signup.html
+++ b/public/signup.html
@@ -9,7 +9,12 @@
 <body>
 
 
+  
   <div class="w3-container w3-theme w3-card" id="background">
+      <div class="w3-display-container"  id="inspirational-photo">
+        <img src="https://content.active.com/Assets/Active.com+Content+Site+Digital+Assets/Fitness/580x350/Secrets+of+People+Who+Love+to+Work+Out/Secret+1.jpg" alt="daunting" id="signupPhoto" class="w3-sepia" style="width:60%; height:auto;">
+      <div class="w3-display-topmiddle w3-container"><p class="w3-xlarge"><i>What Can You Accomplish in 30 Days?</i></p></div>
+    </div>
     <div class="w3-panel w3-card-2 w3-light-grey w3-display-middle" id="form-card">
         <div class="container">
             <div class="row">
